fix(select): content overflow

--- a/src/components/select/index.scss
+++ b/src/components/select/index.scss
@@ -64,6 +64,8 @@
 
     .content {
         padding: .25rem;
+        max-height: 50dvh;
+        overflow-y: auto;
 
         .select-list {
             outline: none !important;
